// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow File Generation creates a simple flow file 1`] = `
Array [
  "// @flow",
  "",
  "// AUTO GENERATED CODE",
  "// Run app-config with 'generate' command to regenerate this file",
  "",
  "export type Configuration = {",
  "  foo?: string;",
  "};",
  "",
]
`;

exports[`Golang File Generation creates a simple Go file 1`] = `
Array [
  "// @generated by app-config",
  "",
  "package main",
  "",
  "import (",
  "	\\"encoding/json\\"",
  "	\\"log\\"",
  "	\\"os\\"",
  "",
  "	\\"github.com/xeipuuv/gojsonschema\\"",
  ")",
  "",
  "var config Configuration",
  "",
  "func init() {",
  "	configText := os.Getenv(\\"APP_CONFIG\\")",
  "	schemaText := os.Getenv(\\"APP_CONFIG_SCHEMA\\")",
  "",
  "	if configText == \\"\\" {",
  "		log.Panic(\\"The APP_CONFIG environment variable was not set\\")",
  "	}",
  "",
  "	if schemaText == \\"\\" {",
  "		log.Panic(\\"The APP_CONFIG_SCHEMA environment variable was not set\\")",
  "	}",
  "",
  "	loadedSchema, err := UnmarshalConfig([]byte(schemaText))",
  "",
  "	if err != nil {",
  "		log.Panic(\\"Could not parse APP_CONFIG_SCHEMA environment variable: \\", err)",
  "	}",
  "",
  "	loadedConfig, err := UnmarshalConfig([]byte(configText))",
  "",
  "	if err != nil {",
  "		log.Panic(\\"Could not parse APP_CONFIG environment variable: \\", err)",
  "	}",
  "",
  "	schemaLoader := gojsonschema.NewGoLoader(loadedSchema)",
  "	documentLoader := gojsonschema.NewGoLoader(loadedConfig)",
  "",
  "	result, err := gojsonschema.Validate(schemaLoader, documentLoader)",
  "",
  "	if err != nil {",
  "		log.Panic(\\"Could not validate app-config: \\", err.Error())",
  "	}",
  "",
  "	if !result.Valid() {",
  "		for _, desc := range result.Errors() {",
  "			log.Printf(\\"- %s\\\\n\\", desc)",
  "		}",
  "",
  "		log.Panic(\\"The app-config value was not valid.\\")",
  "	}",
  "",
  "	config = loadedConfig",
  "}",
  "",
  "func GetConfig() Configuration {",
  "	return config",
  "}",
  "",
  "func UnmarshalConfiguration(data []byte) (Configuration, error) {",
  "	var r Configuration",
  "	err := json.Unmarshal(data, &r)",
  "	return r, err",
  "}",
  "",
  "func (r *Configuration) Marshal() ([]byte, error) {",
  "	return json.Marshal(r)",
  "}",
  "",
  "type Configuration struct {",
  "	Foo *string \`json:\\"foo,omitempty\\"\`",
  "}",
  "",
]
`;

exports[`Rust File Generation creates a simple Rust file 1`] = `
Array [
  "/// AUTO GENERATED CODE",
  "/// Run app-config with 'generate' command to regenerate this file",
  "",
  "extern crate serde_derive;",
  "",
  "#[derive(Serialize, Deserialize)]",
  "pub struct Configuration {",
  "  #[serde(rename = \\"foo\\")]",
  "  foo: Option<String>,",
  "}",
  "",
]
`;

exports[`TypeScript File Generation corrects Date type in TypeScript files 1`] = `
"// AUTO GENERATED CODE
// Run app-config with 'generate' command to regenerate this file

import '@lcdev/app-config';

export interface MyCustomConfigName {
  x?: string;
}

// augment the default export from app-config
declare module '@lcdev/app-config' {
  export interface ExportedConfig extends MyCustomConfigName {}
}
"
`;

exports[`TypeScript File Generation creates a TypeScript file from meta file properties 1`] = `
"// AUTO GENERATED CODE
// Run app-config with 'generate' command to regenerate this file

import '@lcdev/app-config';

export interface MyCustomConfigName {
  x?: number;
}

// augment the default export from app-config
declare module '@lcdev/app-config' {
  export interface ExportedConfig extends MyCustomConfigName {}
}
"
`;

exports[`TypeScript File Generation creates a TypeScript file from schema with many $ref properties 1`] = `
"// AUTO GENERATED CODE
// Run app-config with 'generate' command to regenerate this file

import '@lcdev/app-config';

export interface Config {
  a?: A;
  root?: boolean;
}

export interface A {
  b: B;
}

export interface B {
  c: C;
}

export interface C {
  d: boolean;
}

// augment the default export from app-config
declare module '@lcdev/app-config' {
  export interface ExportedConfig extends Config {}
}
"
`;

exports[`TypeScript File Generation creates a simple TypeScript file 1`] = `
Array [
  "// AUTO GENERATED CODE",
  "// Run app-config with 'generate' command to regenerate this file",
  "",
  "import '@lcdev/app-config';",
  "",
  "export interface Configuration {",
  "  foo?: string;",
  "}",
  "",
  "// augment the default export from app-config",
  "declare module '@lcdev/app-config' {",
  "  export interface ExportedConfig extends Configuration {}",
  "}",
]
`;
